# AIVisionServerDealer

./: .gitignore  CMakeLists.txt  README.md
config/: default.json  test.json
docs/: API.md  config.md  design.md  folder_structure.md  frame.md  parameter.md  server.md
docs/AITest/: AITestServer.md  batch_test.py  zmq_test_2.py
docs/AITest/Test1/: summary.md
docs/AITest/Test1/results/: Task1_1_1.json  Task1_1_10.json  Task1_1_11.json  Task1_1_12.json  Task1_1_13.json  Task1_1_14.json  Task1_1_15.json  Task1_1_16.json  Task1_1_17.json  Task1_1_18.json  Task1_1_19.json  Task1_1_2.json  Task1_1_20.json  Task1_1_21.json  Task1_1_22.json  Task1_1_23.json  Task1_1_24.json  Task1_1_25.json  Task1_1_26.json  Task1_1_27.json  Task1_1_28.json  Task1_1_29.json  Task1_1_3.json  Task1_1_30.json  Task1_1_31.json  Task1_1_32.json  (+328 more)
docs/API design/: AI interface.xlsx
docs/API design/Examples/: Request-AI config.json  Request-AI detection.json  Response-AI config.json  Response-AI detection.json
include/ai_vision/api1/: AdminServer.h  DetectionDealer.h
include/ai_vision/api2/: ImageSubscriber.h  ResultPublisher.h
include/ai_vision/common/: Logger.h  Response.h  Types.h
include/ai_vision/core/: CoreModule.h  ImageBuffer.h
include/ai_vision/data/: ConfigManager.h
scripts/: start.sh
src/: main.cpp
src/api1/: AdminServer.cpp  DetectionDealer.cpp
src/api2/: ImageSubscriber.cpp  ResultPublisher.cpp
src/common/: Logger.cpp  Response.cpp
src/core/: CoreModule.cpp  ImageBuffer.cpp
src/data/: ConfigManager.cpp
tests/: test_cpu.py  test_image_buffer.cpp  test_integration.py  test_stress.py
